# python-workout

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/python_workout/: __init__.py
src/python_workout/ch01_numeric_types/: __init__.py  ex01_guessing_game.py
src/python_workout/ch02_strings/: __init__.py
src/python_workout/ch03_lists_tuples/: __init__.py
src/python_workout/ch04_dicts_sets/: __init__.py
src/python_workout/ch05_files/: __init__.py
src/python_workout/ch06_functions/: __init__.py
src/python_workout/ch07_functional/: __init__.py
src/python_workout/ch08_modules_packages/: __init__.py
src/python_workout/ch09_objects/: __init__.py
src/python_workout/ch10_iterators_generators/: __init__.py
tests/: conftest.py
tests/ch01_numeric_types/: __init__.py  text_ex01_guessing_game.py
tests/ch02_strings/: __init__.py
tests/ch03_lists_tuples/: __init__.py
tests/ch04_dicts_sets/: __init__.py
tests/ch05_files/: __init__.py
tests/ch06_functions/: __init__.py
tests/ch07_functional/: __init__.py
tests/ch08_modules_packages/: __init__.py
tests/ch09_objects/: __init__.py
tests/ch10_iterators_generators/: __init__.py
